--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
         "host": "localhost",
         "port": 27017,
         "pool_size": 15,
-        "db_name": "vertx"
+        "db_name": "vertx",
+        "fake":true
     },
     
     "webServer":{
