--- a/gradle.properties
+++ b/gradle.properties
@@ -42,3 +42,5 @@ runModArgs=-conf config.json -i
 # runModArgs=-conf foo.json
 # runModArgs=-conf someconf.json -ha
 # runModArgs=-cluster
+
+org.gradle.java.home=c:/Program Files/Java/jdk1.8.0
